--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+text.indexController.index.titulo: [Curso de Spring boot con Model desde propeties]
+text.indexController.perfil.titulo: [Perfil del usuario :
+text.indexController.listar.titulo: Lista de usuarios
